Fix IntegratedSafetyChainTransientTest compatibility